--- a/Dockerfile.http
+++ b/Dockerfile.http
@@ -1,14 +1,20 @@
-FROM ubuntu
+FROM golang:1.22-alpine AS build
 
-RUN  apt-get update
-RUN  apt-get -y install golang-go 
-RUN  apt-get install -y ca-certificates
+WORKDIR /server
 
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY . ./server
+COPY . .
 
-WORKDIR /server/cmd/http
+RUN CGO_ENABLED=0 GOOS=linux go build -o /myserver ./cmd/http
 
-CMD go run http.go
+FROM alpine:edge
+
+WORKDIR /server
+
+COPY --from=build /myserver .
+
+EXPOSE 8080
+
+ENTRYPOINT ["./myserver"]
