--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -18,11 +18,11 @@ jobs:
         go-version: '1.22.4'
       
     - name: format
-      uses: Jerome1337/gofmt-action@v1.0.5
+      run: make format
 
     - name: Test
-      run: go test -v ./... 
+      run: make test 
 
     - name : Run Go-linter
-      uses: golangci/golangci-lint-action@v3
+      uses: make linter
       
